Add Nodemailer backend and integrate with contact form

--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-VITE_EMAILJS_SERVICE_ID=service_xuxwuhn
-VITE_EMAILJS_TEMPLATE_ID=template_15bf6dd
-VITE_EMAILJS_PUBLIC_KEY=Y3Bw7DPt83Zl4iPl
+VITE_API_URL=http://localhost:5000
