--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tsparticles/slim": "^3.8.1",
     "@types/react-scroll": "^1.8.10",
     "framer-motion": "^6.5.1",
+    "nodemailer": "^7.0.5",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
@@ -26,6 +27,7 @@
     "react-scroll": "^1.9.3"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@vitejs/plugin-react": "^4.2.1",
